--- a/index_hostInfo.html
+++ b/index_hostInfo.html
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-    <h1>YOURNAME - Task B</h1>
+    <h1>Ashish Mondal :) - Task B</h1>
     <div id="info">
         <p>Hostname: <?php echo gethostname(); ?></p>
         <p>Operating System: <?php echo php_uname('s'); ?> <?php echo php_uname('r'); ?></p>
